--- a/identity-provider/package.json
+++ b/identity-provider/package.json
@@ -20,6 +20,7 @@
     "joi": "^14.3.1",
     "mongodb": "^3.2.2",
     "morgan": "^1.9.1",
+    "request": "^2.88.0",
     "source-map-support": "^0.5.11"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/express": "^4.16.1",
     "@types/joi": "^14.3.2",
     "@types/mongodb": "^3.1.22",
-    "@types/morgan": "^1.7.35"
+    "@types/morgan": "^1.7.35",
+    "@types/request": "^2.48.1"
   }
 }
