--- a/identity-provider/.example.env
+++ b/identity-provider/.example.env
@@ -1,3 +1,3 @@
 DEBUG="app:*"
 # Use the new connection string format
-MONGODB_CONNECTION_STRING=""
+MONGODB_CONNECTION_STRING="mongodb+srv://<username>:<password>@<cluster url>/<db name>?retryWrites=true"
